--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,6 +1,17 @@
-<div class="home-container">
-  <h1>MovieHub</h1>
-  <p>Busca películas y encuentra tus favoritas fácilmente.</p>
+<div class="text-center p-10">
+  <h1 class="text-4xl font-bold mb-4">🎬 MovieHub</h1>
+  <p class="text-lg opacity-80">Tu buscador favorito de peliculas </p>
 
-  <a routerLink="/search" class="btn">Comenzar búsqueda</a>
+  <div class="text-center space-y-6">
+    <h1 class="text-4xl font-bold text-primary">Bienvenido a MovieHub</h1>
+    <p class="text-lg text-base-content/70 max-w-2xl mx-auto">
+      Busca películas, mira detalles y guarda tu historial.
+    </p>
+
+    <a routerLink="/search" class="btn btn-primary btn-lg mt-4">
+      Buscar Películas
+    </a>
+  </div>
+
+
 </div>
